[gd_scene load_steps=22 format=3 uid="uid://cfe280vgd268u"]

[ext_resource type="Script" path="res://scenes/GameplayGui.gd" id="1_6yfmw"]
[ext_resource type="Theme" uid="uid://cqqrcm1g5xvpg" path="res://assets/themes/dash_dash_theme.tres" id="1_egqnx"]
[ext_resource type="PackedScene" uid="uid://xux6yu5r6j2h" path="res://scenes/StaminaBar.tscn" id="2_0eg3r"]
[ext_resource type="Script" path="res://scenes/CurpQueryTab.gd" id="2_kph81"]
[ext_resource type="Script" path="res://scenes/InvisibleOnWeb.gd" id="3_0p3qk"]
[ext_resource type="PackedScene" uid="uid://chj57qgs46mya" path="res://scenes/ScorePanel.tscn" id="3_6jtmv"]
[ext_resource type="PackedScene" uid="uid://c5i2qviw4cmu2" path="res://scenes/ComboBar.tscn" id="3_fqvos"]
[ext_resource type="Script" path="res://scenes/UserDataTab.gd" id="3_g15n0"]
[ext_resource type="PackedScene" uid="uid://bol70ddbnwtv6" path="res://scenes/PersonImage.tscn" id="3_vdsu5"]
[ext_resource type="Script" path="res://scenes/ProofOfLifeTab.gd" id="4_1il7u"]
[ext_resource type="Script" path="res://scenes/ChallengeTabs.gd" id="5_u14hm"]
[ext_resource type="Script" path="res://scenes/GameOverPanel.gd" id="6_cvt1o"]
[ext_resource type="Texture2D" uid="uid://1yc6pjqt5yb" path="res://assets/ui_bar_foreground.png" id="9_ckbef"]
[ext_resource type="Script" path="res://scenes/LoadingNextChallenge.gd" id="11_cex2j"]
[ext_resource type="PackedScene" uid="uid://cd3ciay2hra0b" path="res://scenes/timer_bar.tscn" id="11_xp18w"]
[ext_resource type="AudioStream" uid="uid://u6o406r4qf0w" path="res://assets/sfx/correct_guess.wav" id="12_vrfav"]
[ext_resource type="Script" path="res://scenes/StartDelayContainer.gd" id="13_vkelh"]
[ext_resource type="AudioStream" uid="uid://bs2pjpclfhgce" path="res://assets/sfx/wrong_guess.wav" id="13_wrg3o"]
[ext_resource type="AudioStream" uid="uid://bck3jyehordkk" path="res://assets/sfx/tick.wav" id="17_2qlkh"]
[ext_resource type="AudioStream" uid="uid://q0k7b2htu8oa" path="res://assets/sfx/bang.wav" id="18_xal8g"]
[ext_resource type="AudioStream" uid="uid://bwq1c36gcxfgs" path="res://assets/sfx/pew.wav" id="19_0kxr8"]

[node name="GameplayGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_egqnx")
script = ExtResource("1_6yfmw")

[node name="TitleScreen" type="PanelContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TitleScreen"]
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="CenterContainer" type="CenterContainer" parent="TitleScreen/MarginContainer"]
offset_left = 32.0
offset_top = 16.0
offset_right = 792.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen/MarginContainer/CenterContainer"]
offset_right = 760.0
offset_bottom = 164.0

[node name="TitleLabel" type="Label" parent="TitleScreen/MarginContainer/CenterContainer/VBoxContainer"]
theme_override_font_sizes/font_size = 96
text = "DASH DASH DASHBOARD!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TitleScreen/MarginContainer/CenterContainer/VBoxContainer"]

[node name="PlayLabel" type="Label" parent="TitleScreen/MarginContainer/CenterContainer/VBoxContainer"]
text = "[Spacebar] Play!"
horizontal_alignment = 1

[node name="ExitLabel" type="Label" parent="TitleScreen/MarginContainer"]
offset_left = 32.0
offset_top = 128.0
offset_right = 222.0
offset_bottom = 180.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "[ESC] Exit"
script = ExtResource("3_0p3qk")

[node name="GameContainer" type="PanelContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameContainer"]

[node name="HUD" type="HBoxContainer" parent="GameContainer/VBoxContainer"]
size_flags_vertical = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="GameContainer/VBoxContainer/HUD"]
size_flags_horizontal = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="StaminaTimer" parent="GameContainer/VBoxContainer/HUD/MarginContainer" instance=ExtResource("2_0eg3r")]
unique_name_in_owner = true
offset_left = 32.0
offset_top = 16.0
offset_right = 102.0
offset_bottom = 56.0
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="GameContainer/VBoxContainer/HUD"]

[node name="MarginContainer2" type="MarginContainer" parent="GameContainer/VBoxContainer/HUD"]
size_flags_horizontal = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="ScorePanel" parent="GameContainer/VBoxContainer/HUD/MarginContainer2" instance=ExtResource("3_6jtmv")]
unique_name_in_owner = true
offset_left = 32.0
offset_top = 16.0
offset_right = 214.0
offset_bottom = 212.0
size_flags_horizontal = 3

[node name="VSeparator2" type="VSeparator" parent="GameContainer/VBoxContainer/HUD"]

[node name="MarginContainer3" type="MarginContainer" parent="GameContainer/VBoxContainer/HUD"]
size_flags_horizontal = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="RequestComboCounter" parent="GameContainer/VBoxContainer/HUD/MarginContainer3" instance=ExtResource("3_fqvos")]
unique_name_in_owner = true
anchors_preset = 0
anchor_right = 0.0
offset_left = 32.0
offset_top = -20.0
offset_right = 32.0
offset_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HSeparator" type="HSeparator" parent="GameContainer/VBoxContainer"]

[node name="Control" type="PanelContainer" parent="GameContainer/VBoxContainer"]
size_flags_vertical = 3

[node name="ChallengeContainer" type="VBoxContainer" parent="GameContainer/VBoxContainer/Control"]
unique_name_in_owner = true
visible = false
size_flags_horizontal = 3

[node name="ChallengeTabs" type="TabContainer" parent="GameContainer/VBoxContainer/Control/ChallengeContainer"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
tab_alignment = 1
script = ExtResource("5_u14hm")

[node name="UserDataTab" type="HBoxContainer" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 73.0
script = ExtResource("3_g15n0")
title = "User provided data"

[node name="MarginContainer" type="MarginContainer" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/UserDataTab"]
size_flags_horizontal = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/UserDataTab/MarginContainer"]
offset_left = 32.0
offset_top = 16.0
offset_right = 396.0
offset_bottom = 172.0

[node name="FullName" type="Label" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/UserDataTab/MarginContainer/VBoxContainer"]
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Name: My othercool full name"

[node name="Age" type="Label" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/UserDataTab/MarginContainer/VBoxContainer"]
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Age: My Cool Age"

[node name="Address" type="Label" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/UserDataTab/MarginContainer/VBoxContainer"]
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Address My Cool Address"

[node name="Curp" type="Label" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/UserDataTab/MarginContainer/VBoxContainer"]
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Address My Cool Address"

[node name="MarginContainer2" type="MarginContainer" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/UserDataTab"]
size_flags_horizontal = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="PersonImage" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/UserDataTab/MarginContainer2" instance=ExtResource("3_vdsu5")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 32.0
offset_top = 16.0
offset_right = 512.0
offset_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="ProofOfLifeTab" type="VBoxContainer" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs"]
unique_name_in_owner = true
visible = false
script = ExtResource("4_1il7u")
title = "Life proof data"

[node name="PersonImage" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/ProofOfLifeTab" instance=ExtResource("3_vdsu5")]
size_flags_horizontal = 1
size_flags_vertical = 3

[node name="CurpQueryTab" type="HBoxContainer" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs"]
unique_name_in_owner = true
visible = false
script = ExtResource("2_kph81")
title = "XCrash data"

[node name="MarginContainer" type="MarginContainer" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/CurpQueryTab"]
size_flags_horizontal = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/CurpQueryTab/MarginContainer"]
offset_left = 32.0
offset_top = 16.0
offset_right = 396.0
offset_bottom = 172.0

[node name="FullName" type="Label" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/CurpQueryTab/MarginContainer/VBoxContainer"]
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Name: My othercool full name"

[node name="Age" type="Label" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/CurpQueryTab/MarginContainer/VBoxContainer"]
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Age: My Cool Age"

[node name="Address" type="Label" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/CurpQueryTab/MarginContainer/VBoxContainer"]
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Address My Cool Address"

[node name="Curp" type="Label" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/ChallengeTabs/CurpQueryTab/MarginContainer/VBoxContainer"]
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Address My Cool Address"

[node name="CommitmentButtons" type="HBoxContainer" parent="GameContainer/VBoxContainer/Control/ChallengeContainer"]

[node name="RejectButton" type="Button" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/CommitmentButtons"]
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 112
text = "Reject"

[node name="AcceptButton" type="Button" parent="GameContainer/VBoxContainer/Control/ChallengeContainer/CommitmentButtons"]
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 112
text = "Accept
"

[node name="LoadingNextChallenge" type="CenterContainer" parent="GameContainer/VBoxContainer/Control"]
unique_name_in_owner = true
visible = false
script = ExtResource("11_cex2j")
correct_guess_sfx = ExtResource("12_vrfav")
wrong_guess_sfx = ExtResource("13_wrg3o")

[node name="VBoxContainer" type="VBoxContainer" parent="GameContainer/VBoxContainer/Control/LoadingNextChallenge"]
offset_right = 171.0
offset_bottom = 64.0

[node name="ResultLabel" type="Label" parent="GameContainer/VBoxContainer/Control/LoadingNextChallenge/VBoxContainer"]
unique_name_in_owner = true
size_flags_horizontal = 4
text = "Ready?..."
horizontal_alignment = 1

[node name="TimerBar" parent="GameContainer/VBoxContainer/Control/LoadingNextChallenge/VBoxContainer" instance=ExtResource("11_xp18w")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 8)
size_flags_horizontal = 4
step = 0.0
value = 100.0
fill_mode = 6
nine_patch_stretch = true
texture_under = ExtResource("9_ckbef")
texture_progress = ExtResource("9_ckbef")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(1, 0.376471, 0.027451, 1)

[node name="StartDelayContainer" type="CenterContainer" parent="GameContainer/VBoxContainer/Control"]
unique_name_in_owner = true
visible = false
script = ExtResource("13_vkelh")
tick_sfx = ExtResource("17_2qlkh")
bang_sfx = ExtResource("18_xal8g")

[node name="DelayLabel" type="Label" parent="GameContainer/VBoxContainer/Control/StartDelayContainer"]
offset_right = 240.0
offset_bottom = 603.0
theme_override_font_sizes/font_size = 600
text = "3"

[node name="Timer" type="Timer" parent="GameContainer/VBoxContainer/Control/StartDelayContainer/DelayLabel"]
one_shot = true

[node name="PausePanel" type="PanelContainer" parent="."]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PausePanel"]
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="Pause" type="Label" parent="PausePanel/MarginContainer"]
offset_left = 32.0
offset_top = 16.0
offset_right = 512.0
offset_bottom = 259.0
theme_override_font_sizes/font_size = 240
text = "PAUSA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="Label" parent="PausePanel/MarginContainer"]
offset_left = 32.0
offset_top = 207.0
offset_right = 374.0
offset_bottom = 259.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "[ESC] Title Screen"

[node name="GameOverResults" type="PanelContainer" parent="."]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_cvt1o")
stamina_depleted_sfx = ExtResource("19_0kxr8")

[node name="MarginContainer" type="MarginContainer" parent="GameOverResults"]
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverResults/MarginContainer"]
offset_left = 32.0
offset_top = 16.0
offset_right = 792.0
offset_bottom = 340.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameOver" type="Label" parent="GameOverResults/MarginContainer/VBoxContainer"]
theme_override_font_sizes/font_size = 96
text = "IT'S GAME OVER, MAN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxCombo" type="Label" parent="GameOverResults/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
text = "100"

[node name="MaxMultiplier" type="Label" parent="GameOverResults/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
text = "1.50"

[node name="BonusPoints" type="Label" parent="GameOverResults/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
text = "Bonus! 999"

[node name="TotalScore" type="Label" parent="GameOverResults/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
text = "99999"

[node name="TryAgainLabel" type="Label" parent="GameOverResults/MarginContainer"]
offset_left = 393.0
offset_top = 288.0
offset_right = 792.0
offset_bottom = 340.0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "[SPACEBAR] Try again!"

[node name="ToTitleScreenLabel" type="Label" parent="GameOverResults/MarginContainer"]
offset_left = 32.0
offset_top = 288.0
offset_right = 374.0
offset_bottom = 340.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "[ESC] Title screen"

[node name="QuotePanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="QuotePanel"]
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="Label" type="RichTextLabel" parent="QuotePanel/MarginContainer"]
offset_left = 32.0
offset_top = 16.0
offset_right = 431.0
offset_bottom = 98.0
size_flags_vertical = 4
bbcode_enabled = true
text = "[p align=center][font size=48]\"Playing a game is the voluntary attempt to overcome unnecessary obstacles.\"[/font][/p]
[p align=center][font size=32]- Bernard Suits[/font][/p]"
fit_content_height = true

[node name="StartGameLabel" type="Label" parent="QuotePanel/MarginContainer"]
offset_left = 32.0
offset_top = 46.0
offset_right = 431.0
offset_bottom = 98.0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "[SPACEBAR] Start game"

[node name="IntructionsPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="IntructionsPanel"]
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="Label" type="RichTextLabel" parent="IntructionsPanel/MarginContainer"]
offset_left = 32.0
offset_top = 16.0
offset_right = 279.0
offset_bottom = 68.0
bbcode_enabled = true
text = "[p align=center][font size=80]Instructions:[/font][/p]
[font size=48]
[ul]Check the data for any inconsistencies.[/ul]

[ul]Click \"reject\" if you find any inconsistencies between the data presented on the content of the tabs.[/ul]

[ul]Click \"accept\" if you think everything checks out.[/ul]

[ul]Every time you guess correctly, you [u]gain[/u] some [color=teal]stamina[/color] and you also start or extend your  [color=yellow]combo[/color] counter.[/ul]

[ul]If your guess is incorrect, you [u]lose[/u] some [color=teal]stamina[/color] and  your current  [color=yellow]combo[/color] [shake rate=10 level=10]breaks[/shake].[/ul]

[ul]If your stamina reaches zero,  [color=red]it's game over, man![/color][/ul]
[/font]"

[node name="ExitLabel" type="Label" parent="IntructionsPanel/MarginContainer"]
offset_left = 32.0
offset_top = 16.0
offset_right = 279.0
offset_bottom = 68.0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "[SPACEBAR] OK"

[connection signal="pressed" from="GameContainer/VBoxContainer/Control/ChallengeContainer/CommitmentButtons/RejectButton" to="." method="_on_reject_button_pressed"]
[connection signal="pressed" from="GameContainer/VBoxContainer/Control/ChallengeContainer/CommitmentButtons/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="timeout" from="GameContainer/VBoxContainer/Control/LoadingNextChallenge" to="." method="_on_loading_next_challenge_timeout"]
[connection signal="timeout" from="GameContainer/VBoxContainer/Control/LoadingNextChallenge/VBoxContainer/TimerBar" to="GameContainer/VBoxContainer/Control/LoadingNextChallenge" method="_on_timer_bar_timeout"]
[connection signal="timeout" from="GameContainer/VBoxContainer/Control/StartDelayContainer/DelayLabel/Timer" to="GameContainer/VBoxContainer/Control/StartDelayContainer" method="_on_timer_timeout"]
